web/server/data/bash-logs/bash_2026-07-14T09-55-21_cb9w.log
# bash log — 2026/7/14 17:55:21
# session: (none)
# exit: 1  duration: 57ms
# command:
python -c "
import os, shutil, time
base = 'C:\\Users\\dmql\\Desktop\\25立项'
files = os.listdir(base)
target = [f for f in files if '2509' in f][0]
src = 'C:\\.Yi\\_2509_temp.docx'
dst = os.path.join(base, target)

# Retry copy with delay
for i in range(3):
    try:
        shutil.copy2(src, dst)
        print(f'Copied OK on attempt {i+1}')
        break
    except Exception as e:
        print(f'Attempt {i+1} failed: {e}')
        time.sleep(1)
"



# stderr (104 chars):
  File "<string>", line 1
    "
    ^
SyntaxError: unterminated string literal (detected at line 1)
